--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: '3'
 
 services:
-  db:
+  mongodb:
     image: 'bitnami/mongodb:latest'
     ports:
       - 27017:27017
     restart: on-failure
     environment:
-      - MONGODB_REPLICA_SET_MODE=primary
       - MONGODB_ADVERTISED_HOSTNAME=localhost
       - ALLOW_EMPTY_PASSWORD=yes
